--- a/config/Avaritia.cfg
+++ b/config/Avaritia.cfg
@@ -20,12 +20,12 @@ compatibility {
     B:"Ars Magica 2"=true
     B:"Big Reactors"=true
     B:"Blood Magic"=true
-    B:Botania=false
+    B:Botania=true
     B:"Draconic Evolution"=true
     B:EnderIO=true
     B:"Equivalent Exchange 3"=true
-    B:"Extra Cells"=false
-    B:"Extra Utilities"=false
+    B:"Extra Cells"=true
+    B:"Extra Utilities"=true
     B:Forestry=true
     B:"Forestry Bees"=false
     B:"Gregtech 5"=true
@@ -50,7 +50,7 @@ general {
     B:"Boring Food"=true
 
     # Disable if you don't want the World Breaker to break unbreakable blocks
-    B:"Break Bedrock"=true
+    B:"Break Bedrock"=false
 
     # Enable to completely disable most of the mod except for the Dire Crafting table. For if you just want the mod for Minetweaking purposes.
     B:"Crafting Only"=false
@@ -73,7 +73,7 @@ general {
 ##########################################################################################################
 
 materials {
-    B:Clay=false
+    B:Clay=true
     B:Copper=true
     B:Lead=true
     B:"Nickel/Ferrous"=true
