--- a/config/powercrystals/netherores/common.cfg
+++ b/config/powercrystals/netherores/common.cfg
@@ -793,7 +793,7 @@ worldgen {
         I:BlocksPerGroup=12
 
         # If true, Hellfish will spawn in the Nether. Note that setting this false will not kill active Hellfish mobs.
-        B:Enable=false
+        B:Enable=true
 
         # If true, Hellfish will spawn from broken NetherOres.
         B:EnableSpawningFromOre=true
