Update v4.3.3     Update mods     - AppliedEnergistics 2         - AE2stuff         - ThaumicEnergistics         - WirelessCraftingTerminal     - IC2 Crop-Breeding Plugin     - CraftTweaker
    Update scripts
    - AE2
    - IC2mods
    - Thaumcraft

    New mods
    - BetterFps
    - Controlling
    - FloodLights
    - FullscreenWindowed
    - Morpheus
    - NetherPortalFix
    - ReAuth
    - Translocator

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -102,6 +102,13 @@ avaritia {
 }
 
 
+avaritiaddons {
+    B:CompressedChest=false
+    B:ExtremeAutoCrafter=false
+    B:InfinityChest=false
+}
+
+
 awwayoftime {
     B:AlchemicalWizardrybloodRune=true
     B:AlchemicalWizardrybloodRune.1=true
@@ -2738,6 +2745,18 @@ ezstorage {
 }
 
 
+floodlights {
+    B:carbonFloodlight=false
+    B:electricFloodlight=false
+    B:growLight=false
+    B:smallElectricFloodlightMetaBlock=false
+    B:smallElectricFloodlightMetaBlock.1=false
+    B:tilePhantomLight=false
+    B:tileUVLight=false
+    B:uvFloodlight=false
+}
+
+
 forbiddenmagic {
     B:ArcaneCake=false
     B:InkFlower=false
@@ -2750,6 +2769,11 @@ forbiddenmagic {
     B:TaintSapling=false
     B:UmbralBush=false
     B:WrathCage=false
+}
+
+
+forgerelocation {
+    B:relocationblockmovingrow=false
 }
 
 
@@ -3234,6 +3258,12 @@ jabba {
 logisticspipes {
     B:logisticsPipeBlock=false
     B:logisticsSolidBlock=false
+}
+
+
+mcframes {
+    B:mcframesframe=false
+    B:mcframesmotor=false
 }
 
 
@@ -4109,6 +4139,12 @@ thaumictinkerer {
 torcherino {
     B:tileinversetorcherino=false
     B:tiletorcherino=false
+}
+
+
+translocator {
+    B:craftingGrid=false
+    B:translocator=false
 }
 
 
