--- a/config/GregTech/Recipes.cfg
+++ b/config/GregTech/Recipes.cfg
@@ -44328,6 +44328,7 @@ maceration {
     B:nuggetDarkSteel_true=true
     B:nuggetDeepIron_true=true
     B:nuggetDesh_true=true
+    B:nuggetDiamond_true=true
     B:nuggetDraconium_true=true
     B:nuggetDuranium_true=true
     B:nuggetDysprosium_true=true
@@ -61011,6 +61012,8 @@ pulveriser {
     I:nuggetDeepIron_400=400
     I:nuggetDesh_16=16
     I:nuggetDesh_400=400
+    I:nuggetDiamond_400=400
+    I:nuggetDiamond_85=85
     I:nuggetDraconium_16=16
     I:nuggetDraconium_400=400
     I:nuggetDuranium_16=16
@@ -77313,6 +77316,7 @@ pulverization {
     B:nuggetDarkSteel_true=true
     B:nuggetDeepIron_true=true
     B:nuggetDesh_true=true
+    B:nuggetDiamond_true=true
     B:nuggetDraconium_true=true
     B:nuggetDuranium_true=true
     B:nuggetDysprosium_true=true
@@ -88120,6 +88124,7 @@ rockcrushing {
     B:nuggetDarkSteel_true=true
     B:nuggetDeepIron_true=true
     B:nuggetDesh_true=true
+    B:nuggetDiamond_true=true
     B:nuggetDraconium_true=true
     B:nuggetDuranium_true=true
     B:nuggetDysprosium_true=true
