--- a/config/GregTech/Unification.cfg
+++ b/config/GregTech/Unification.cfg
@@ -9813,6 +9813,10 @@ specialunificationtargets {
         B:dustPyrotheum_false=false
     }
 
+    translocator {
+        B:nuggetDiamond_false=false
+    }
+
 }
 
 
