--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Feb 21, 2018 6:36:14 PM
+; created Dec 11, 2019 1:08:44 AM
 ;---
 
 ; Settings which have some effect on gameplay or visuals.
