[update] 4.3.4 include mods ・Baubles(Download error)
update mods
・Applied Energistics2 rv3
　・addon
・IC2 Crop Plugin

new mods
・CosmeticArmorReworked
・defaultkeys
・InGameInfoXML
・LunatriusCore

delete mods
・Gregtania

--- a/config/gregtania.cfg
+++ b/config/gregtania.cfg
@@ -8,7 +8,7 @@ general {
     B:EnableCustomOrechidWeights=false
 
     # The higher tier orechid also includes the ores in the lower tier orechids.
-    B:OreStacking=true
+    B:OreStacking=false
 }
 
 
