--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Dec 11, 2019 1:08:44 AM
+; created May 20, 2020 8:27:19 PM
 ;---
 
 ; Settings which have some effect on gameplay or visuals.
