[update] clean up

--- a/config/GregTech/Recipes.cfg
+++ b/config/GregTech/Recipes.cfg
@@ -17604,6 +17604,7 @@ chemicalbath {
     I:ingotTripleWroughtIron_100=100
     I:ingotWroughtIron_100=100
     I:item.itemDustLithiumCarbonate_1800=1800
+    I:item.potatoPoisonous_400=400
     I:item.reeds_100=100
     I:item.snowball_400=400
     I:nuggetIron_100=100
@@ -18747,10 +18748,12 @@ compressor {
     I:item.carrots_300=300
     I:item.clay_300=300
     I:"item.extrautils:unstableingot.0_300"=300
+    I:"item.extrautils:unstableingot.2_300"=300
     I:item.potato_300=300
     I:item.wheat_300=300
     I:"item.witchery:garlic_300"=300
     I:tile.cactus_300=300
+    I:tile.chest_300=300
     I:tile.flower1.dandelion_300=300
     I:tile.flower2.poppy_300=300
     I:tile.ice_300=300
