--- a/config/LunatriusCore.cfg
+++ b/config/LunatriusCore.cfg
@@ -13,7 +13,9 @@ versioncheck {
     # A list of known updates. Deleting versions from the list will remind you about them again.
     S:knownVersions <
         InGameInfoXML 2.8.1.82
+        InGameInfoXML 9.9.9.999
         LunatriusCore 1.1.2.21
+        LunatriusCore 9.9.9.999
      >
 
     # Should the mod remind you only for new updates (once per version)?
