--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,57 @@
 name: Deploy modpack
+
+permissions:
+  contents: write
+  deployments: write
+
 on:
-  push:
-    tags:
-      - 'v*-release'
-      - 'v*-beta'
-      - 'v*-alpha'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Modpack version'
+        required: true
+      release_type:
+        description: 'Release type'
+        type: choice
+        default: 'release'
+        options:
+          - 'release'
+          - 'beta'
+          - 'alpha'
+
+env:
+  # Version of the mod
+  FULL_VERSION: "v${{ github.event.inputs.version }}-${{ github.event.inputs.release_type }}"
+  # type of release
+  NAME: "GTExpert"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Get the version
+      - name: Check if tag already exists
         run: |
-          echo VERSION=$(echo ${GITHUB_REF} | sed -e 's#refs/tags/##g' | awk -F'-' '{print $1}') >> $GITHUB_ENV
-          echo LEVEL=$(echo ${GITHUB_REF} | sed -e 's#refs/tags/##g' | awk -F'-' '{print $2}') >> $GITHUB_ENV
+          if git rev-parse --verify --quiet "v${{ github.event.inputs.version }}"; then
+            echo "Version ${{ github.event.inputs.version }} already exists, aborting workflow."
+            exit 1
+          fi
 
       - name: Set the version
         run: |
-          MODPACKVERSION=${{ env.VERSION }}
-          sed -i -e "s/MODPACKVERSION/${MODPACKVERSION}/g" ./manifest.json
-          sed -i -e "s/MODPACKVERSION/${MODPACKVERSION}/g" ./instance.cfg
+          sed -i -e "s/MODPACKVERSION/v${{ github.event.inputs.version }}/g" ./manifest.json
+          sed -i -e "s/MODPACKVERSION/v${{ github.event.inputs.version }}/g" ./instance.cfg
 
       - name: Archive Release CF
         run: |
-          zip -r ./GTExpert-${{ env.VERSION }}-pr-${{ env.PR_VERSION }}-cf.zip ./manifest.json ./modlist.html ./overrides/bansoukou/ ./overrides/config/ ./overrides/mods/ ./overrides/scripts/
+          zip -r ./${{ env.NAME }}-${{ env.FULL_VERSION }}-cf.zip ./manifest.json ./modlist.html ./manifest.json ./modlist.html ./overrides/bansoukou/ ./overrides/config/ ./overrides/scripts/
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
           cache: pip
 
       - name: Install dependencies
@@ -47,7 +67,7 @@ jobs:
       - name: Archive Release MMC
         run: |
           mv -vf ./overrides/ .minecraft/
-          zip -r ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-mmc.zip ./mmc-pack.json ./instance.cfg .minecraft/
+          zip -r ./${{ env.NAME }}-${{ env.FULL_VERSION }}-mmc.zip ./mmc-pack.json ./instance.cfg .minecraft/
 
       - name: Move Server Files
         run: |
@@ -56,27 +76,16 @@ jobs:
       - name: Archive Release Server
         run: |
           mv -vf .minecraft/* ./
-          zip -r ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-server.zip ./PleaseRead.txt ./Install.bat ./Install.sh ./ServerStart.bat ./ServerStart.sh ./settings.bat ./settings.sh ./TmuxServer.sh ./bansoukou/ ./config/ ./mods/ ./scripts/
+          zip -r ./${{ env.NAME }}-${{ env.FULL_VERSION }}-server.zip ./docker-compose.yml ./PleaseRead.txt ./Install.bat ./Install.sh ./ServerStart.bat ./ServerStart.sh ./settings.bat ./settings.sh ./TmuxServer.sh ./bansoukou/ ./config/ ./mods/ ./scripts/
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
+          tag_name: "${{ env.FULL_VERSION }}"
+          draft: false
           prerelease: false
           generate_release_notes: true
           files: |
-            ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-cf.zip
-            ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-mmc.zip
-            ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-server.zip
-
-      - name: Upload Curseforge
-        uses: ./.github/actions/curseforge-modpack-upload
-        with: 
-          api-token: ${{ secrets.CF_API_TOKEN }}
-          project-id: '247653'
-          modpack-path: ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-cf.zip
-          modpack-server-path: ./GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-server.zip
-          game-version: '628' # 628 or 6756 (Accepted at either)
-          display-name: GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}
-          server-display-name: GTExpert-${{ env.VERSION }}-${{ env.LEVEL }}-server
-          release-type: ${{ env.LEVEL }}
+            ./${{ env.NAME }}-${{ env.FULL_VERSION }}-cf.zip
+            ./${{ env.NAME }}-${{ env.FULL_VERSION }}-mmc.zip
+            ./${{ env.NAME }}-${{ env.FULL_VERSION }}-server.zip
