--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Archive Release MMC
         run: |
           mv -vf ./overrides/ .minecraft/
+          rm -rf ./xmods/
           zip -r ./GTExpert-${{ env.VERSION }}-pr-${{ env.PR_VERSION }}-mmc.zip ./mmc-pack.json ./instance.cfg .minecraft/
 
       - name: Move Server Files
