--- a/manifest.json
+++ b/manifest.json
@@ -383,6 +383,26 @@
       "projectID": 318159,
       "fileID": 2844088,
       "required": true
+    },
+    {
+      "projectID": 358228,
+      "fileID": 4799391,
+      "required": true
+    },
+    {
+      "projectID": 746279,
+      "fileID": 4378043,
+      "required": true
+    },
+    {
+      "projectID": 746280,
+      "fileID": 4388255,
+      "required": true
+    },
+    {
+      "projectID": 229323,
+      "fileID": 2242993,
+      "required": true
     }
   ],
   "overrides": "overrides"
